apply plugin: 'java'

group = 'org.homer'
version = '2.0.2'

description = """Neo4j Procedures for Graph Versioning"""

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'org.neo4j.test', name: 'neo4j-harness', version:'3.5.1'
    testCompile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version:'1.7.2'
    testCompile group: 'junit', name: 'junit', version:'4.12'
    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version:'2.0.0.0'
    testCompile group: 'org.mockito', name: 'mockito-core', version:'2.13.0'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
    compile group: 'org.neo4j', name: 'neo4j', version:'3.5.1'
}
